# AudioReach

jni/: Android.mk  Application.mk
libs/armeabi-v7a/: agmplay
test/: agmmixer.c  agmmixer.h
tinyalsa/: Android.bp  mixer.c  pcm.c  pcm_io.h  pcm_plugin.c
tinyalsa/include/agm/: device.h
tinyalsa/include/inc/: agm_api.h  graph.h
tinyalsa/include/tinyalsa/: asoundlib.h  mixer_plugin.h  pcm_plugin.h
tinyalsad/: Makefile.am  configure.ac  mixer_hw.c  mixer_plugin.c  pcm_hw.c
tinyalsad/include/agm/: graph_module.h  kvh2xml.h  session_obj.h
